javascript da calculadora, parte lógica implementada

--- a/index.html
+++ b/index.html
@@ -20,39 +20,98 @@
                 type="text"
                 id="display"
                 readonly
+                maxlength="20"
+                autocorrect="off"
+                autocapitalize="off"
+                spellcheck="false"
               />
             </div>
             <div class="calculator-box-buttons">
-              <button class="calculator-box-buttons-button" id="one">1</button>
-              <button class="calculator-box-buttons-button" id="two">2</button>
-              <button class="calculator-box-buttons-button" id="three">
+              <button class="calculator-box-buttons-button" value="1" id="one">
+                1
+              </button>
+              <button class="calculator-box-buttons-button" value="2" id="two">
+                2
+              </button>
+              <button
+                class="calculator-box-buttons-button"
+                value="1"
+                id="three"
+              >
                 3
               </button>
-              <button class="calculator-box-buttons-button" id="four">4</button>
-              <button class="calculator-box-buttons-button" id="five">5</button>
-              <button class="calculator-box-buttons-button" id="six">6</button>
-              <button class="calculator-box-buttons-button" id="seven">
+              <button class="calculator-box-buttons-button" value="4" id="four">
+                4
+              </button>
+              <button class="calculator-box-buttons-button" value="5" id="five">
+                5
+              </button>
+              <button class="calculator-box-buttons-button" value="6" id="six">
+                6
+              </button>
+              <button
+                class="calculator-box-buttons-button"
+                value="7"
+                id="seven"
+              >
                 7
               </button>
-              <button class="calculator-box-buttons-button" id="eight">
+              <button
+                class="calculator-box-buttons-button"
+                value="8"
+                id="eight"
+              >
                 8
               </button>
-              <button class="calculator-box-buttons-button" id="nine">9</button>
-              <button class="calculator-box-buttons-button" id="zero">0</button>
-              <button class="calculator-box-buttons-button" id="sum">+</button>
-              <button class="calculator-box-buttons-button" id="subtraction">
+              <button class="calculator-box-buttons-button" value="9" id="nine">
+                9
+              </button>
+              <button class="calculator-box-buttons-button" value="0" id="zero">
+                0
+              </button>
+              <button class="calculator-box-buttons-button" value="+" id="sum">
+                +
+              </button>
+              <button
+                class="calculator-box-buttons-button"
+                value="-"
+                id="subtraction"
+              >
                 -
               </button>
-              <button class="calculator-box-buttons-button" id="point">
+              <button
+                class="calculator-box-buttons-button"
+                value="."
+                id="point"
+              >
                 .
               </button>
-              <button class="calculator-box-buttons-button" id="division">
+              <button
+                class="calculator-box-buttons-button"
+                value="/"
+                id="division"
+              >
                 ÷
               </button>
-              <button class="calculator-box-buttons-button" id="multiplication">
+              <button
+                class="calculator-box-buttons-button"
+                value="*"
+                id="multiplication"
+              >
                 x
               </button>
-              <button class="calculator-box-buttons-button" id="result">
+              <button
+                class="calculator-box-buttons-button"
+                value="c"
+                id="clear"
+              >
+                c
+              </button>
+              <button
+                class="calculator-box-buttons-button"
+                value="="
+                id="result"
+              >
                 =
               </button>
             </div>
